[FIX] adjust version to run in the nexus context